force-app/main/default/objects/Legal_Events__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <label>Assigned</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam Peltz</fullName>
            </value>
            <value>
                <fullName>Alice Henderson</fullName>
            </value>
            <value>
                <fullName>Amanda Johnson</fullName>
            </value>
            <value>
                <fullName>Ben Levitan</fullName>
            </value>
            <value>
                <fullName>Christie Hicks</fullName>
            </value>
            <value>
                <fullName>Elizabeth Stein</fullName>
            </value>
            <value>
                <fullName>Erica Morehouse</fullName>
            </value>
            <value>
                <fullName>Graham McCahan</fullName>
            </value>
            <value>
                <fullName>Holly Pearen</fullName>
            </value>
            <value>
                <fullName>Jim Marston</fullName>
            </value>
            <value>
                <fullName>Jim Tripp</fullName>
            </value>
            <value>
                <fullName>John Finnigan</fullName>
            </value>
            <value>
                <fullName>Larissa Koehler</fullName>
            </value>
            <value>
                <fullName>Lauren Navarro</fullName>
            </value>
            <value>
                <fullName>Martha Roberts</fullName>
            </value>
            <value>
                <fullName>Michael Panfil</fullName>
            </value>
            <value>
                <fullName>Monica Goldberg</fullName>
            </value>
            <value>
                <fullName>Naim Jonathan Peress</fullName>
            </value>
            <value>
                <fullName>Natalie Saunders</fullName>
            </value>
            <value>
                <fullName>Nichole Saunders</fullName>
            </value>
            <value>
                <fullName>Pamela Campos</fullName>
            </value>
            <value>
                <fullName>Peter Zalzal</fullName>
            </value>
            <value>
                <fullName>Priyanka Sundareshan</fullName>
            </value>
            <value>
                <fullName>Rachel Fullmer</fullName>
            </value>
            <value>
                <fullName>Rob Stockman</fullName>
            </value>
            <value>
                <fullName>Rosalie Winn</fullName>
            </value>
            <value>
                <fullName>Shems Jud</fullName>
            </value>
            <value>
                <fullName>Timothy O&apos;Connor</fullName>
            </value>
            <value>
                <fullName>Tomas Carbonell</fullName>
            </value>
            <value>
                <fullName>Tom Neltner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>