force-app/main/default/objects/Legal_Events__c/fields/Litigation_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Litigation_Record_Number__c</fullName>
    <label>Litigation Record Number</label>
    <referenceTo>Litigation_Tracking__c</referenceTo>
    <relationshipName>Litigation_Dates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>